# samples

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  QUICKSTART.md  README.md  SECURITY.md  release.toml  requirements.txt  sonar-project.properties  source-config.json
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  example_request.md  feature_request.md
.github/scripts/: check_license_policy.py  generate_notice.py  generate_sbom.sh  verify_imports.py
.github/workflows/: python.yml  release.yml  rust.yml  sbom.yml  sonar.yml
edgefirst/samples/: __init__.py  gps.py  gps_rerun.py  imu.py  imu_rerun.py
edgefirst/samples/camera/: camera_info.py  h264.py  jpeg.py
edgefirst/samples/fusion/: lidar.py  mask_output_tracked.py  model_output.py  occupancy.py  target.py
edgefirst/samples/lidar/: clusters.py  depth.py  points.py  reflect.py
edgefirst/samples/lidar-clusters/: __main__.py
edgefirst/samples/lidar-depth/: __main__.py
edgefirst/samples/lidar-points/: __main__.py
edgefirst/samples/lidar-reflect/: __main__.py
edgefirst/samples/list-topics/: __main__.py
edgefirst/samples/model/: boxes2d.py  compressed_mask.py  mask.py  model_info.py  modelpack
edgefirst/samples/radar/: clusters.py  cube.py  info.py  targets.py
python/: gps.py  imu.py  list-topics.py
python/camera/: camera_info.py  dma.py  h264.py  jpeg.py
python/combined/: camera_lidar.py  camera_model.py  camera_radar.py  mega_sample.py
python/foxglove/: camera_model.py  gps.py
python/foxglove/camera/: camera_info.py  h264.py  jpeg.py
python/foxglove/combined/: camera_lidar.py  camera_radar.py  mega_sample.py
python/foxglove/fusion/: boxes3d.py  model_output_tracked.py
python/foxglove/lidar/: clusters.py  points.py  reflect.py
python/foxglove/radar/: clusters.py  info.py  targets.py
python/fusion/: boxes3d.py  lidar.py  mask_output_tracked.py  model_output.py  model_output_tracked.py  occupancy.py  radar.py  target.py
python/hal/: DEVELOPMENT_SUMMARY.md  EDGEFIRST_HAL_GUIDE.md  INDEX.md  decoder.py  dma.py  resize.py  tracking.py
python/lidar/: clusters.py  depth.py  points.py  reflect.py
python/model/: boxes2d.py  boxes2d_tracked.py  compressed_mask.py  mask.py  model_info.py  modelpack.py
python/radar/: clusters.py  cube.py  info.py  targets.py
python/rerun/: imu.py
python/rerun/camera/: camera_info.py  dma.py
python/rerun/combined/: camera_lidar.py  camera_model.py  camera_radar.py
python/rerun/fusion/: boxes3d.py
python/rerun/lidar/: clusters.py  depth.py
python/rerun/model/: boxes2d.py  mask.py  model_info.py
python/rerun/radar/: clusters.py  cube.py
rust/: edgefirst_foxglove.rs  gps.rs  imu.rs  lib.rs  list-topics.rs
rust/camera/: camera_info.rs  dma.rs  fourcc.rs  h264.rs
rust/combined/: camera_lidar.rs  camera_model.rs  camera_radar.rs  mega_sample.rs
rust/foxglove/camera/: dma.rs  h264.rs
rust/foxglove/combined/: camera_lidar.rs  camera_model.rs  camera_radar.rs
rust/fusion/: boxes3d.rs  lidar.rs  model_output.rs  model_output_tracked.rs  occupancy.rs  radar.rs  target.rs
rust/hal/: decoder.rs
rust/lidar/: clusters.rs  depth.rs  points.rs  reflect.rs
rust/model/: boxes2d.rs  boxes2d_tracked.rs  compressed_mask.rs  mask.rs  model_info.rs
rust/radar/: clusters.rs  cube.rs  info.rs  targets.rs
src/: gps.rs  imu.rs  lidar-clusters.rs  lidar-depth.rs  lidar-points.rs  lidar-reflect.rs  list-topics.rs
src/camera/: camera_info.rs  h264.rs  jpeg.rs
src/fusion/: boxes3d.rs  lidar.rs  mask_output_tracked.rs  model_output.rs  model_output_tracked.rs  occupancy.rs  target.rs
src/lidar/: clusters.rs  depth.rs  points.rs  reflect.rs
src/model/: boxes2d.rs  compressed_mask.rs  mask.rs  model_info.rs
src/radar/: clusters.rs  cube.rs  info.rs  targets.rs
