[package]
name = "edgefirst-samples"
version = "0.0.0"
edition = "2024"

[[bin]]
name = "list-topics"
path = "rust/list-topics.rs"

[[bin]]
name = "lidar-clusters"
path = "rust/lidar/clusters.rs"

[[bin]]
name = "lidar-points"
path = "rust/lidar/points.rs"

[[bin]]
name = "lidar-depth"
path = "rust/lidar/depth.rs"

[[bin]]
name = "lidar-reflect"
path = "rust/lidar/reflect.rs"

[[bin]]
name = "radar-targets"
path = "rust/radar/targets.rs"

[[bin]]
name = "radar-clusters"
path = "rust/radar/clusters.rs"

[[bin]]
name = "radar-info"
path = "rust/radar/info.rs"

[[bin]]
name = "radar-cube"
path = "rust/radar/cube.rs"

[[bin]]
name = "fusion-radar"
path = "rust/fusion/radar.rs"

[[bin]]
name = "fusion-lidar"
path = "rust/fusion/lidar.rs"

[[bin]]
name = "fusion-boxes3d"
path = "rust/fusion/boxes3d.rs"

[[bin]]
name = "fusion-occupancy"
path = "rust/fusion/occupancy.rs"

[[bin]]
name = "fusion-model-output"
path = "rust/fusion/model_output.rs"

[[bin]]
name = "fusion-model-output-tracked"
path = "rust/fusion/model_output_tracked.rs"

[[bin]]
name = "imu"
path = "rust/imu.rs"

[[bin]]
name = "gps"
path = "rust/gps.rs"

[features]
default = ["rerun"]
rerun = ["dep:rerun"]

[dependencies]
cdr = "0.2.4"
colorous = "1.0.16"
clap = { version = "4.5.38", features = ["derive"] }
edgefirst-schemas = "1.3.0"
rerun = { version = "0.23.2", optional = true }
serde_json = "1.0.140"
tokio = { version = "1.45.0", default-features = false, features = ["rt"] }
zenoh = "1.3.4"
itertools = "0.14.0"
